# hle-client

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY_AUDIT.md  install.sh  pyproject.toml
.github/workflows/: auto-release.yml  deb.yml  homebrew.yml  notify-server.yml  publish.yml  security.yml  test.yml
contrib/: hle.service
debian/: changelog  control  copyright  hle-client.default  hle-client.service  postinst  postrm  prerm  rules
scripts/: pre-commit  release.sh
src/hle_client/: __init__.py  api.py  cli.py  hooks.py  proxy.py  tunnel.py
src/hle_common/: __init__.py  models.py  protocol.py
tests/unit/: test_api_client.py  test_cli_commands.py  test_client.py  test_discovery.py  test_hooks.py  test_models.py  test_protocol.py  test_tunnel_fatal.py
