[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hle-client"
version = "1.9.0"
description = "Home Lab Everywhere — Expose homelab services to the internet with built-in SSO"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Home Lab Everywhere" },
]
keywords = ["homelab", "tunnel", "sso", "reverse-proxy", "webhook"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
]
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "websockets>=13.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "rich>=13.0",
    "cryptography>=43.0",
    "pyjwt>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.scripts]
hle = "hle_client.cli:main"

[project.urls]
Homepage = "https://hle.world"
Repository = "https://github.com/hle-world/hle-client"
Issues = "https://github.com/hle-world/hle-client/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/hle_client", "src/hle_common"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM", "TCH"]

[tool.ruff.lint.isort]
known-first-party = ["hle_client", "hle_common"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: unit tests",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
packages = ["hle_client", "hle_common"]
mypy_path = "src"
